[Resource Sharing] Allow multiple sharable resource types in single resource index (#5713)
Signed-off-by: Craig Perkins <cwperx@amazon.com>
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>
Co-authored-by: Darshit Chanpura <dchanp@amazon.com>